--- a/input/css/override.css
+++ b/input/css/override.css
@@ -1,3 +1,24 @@
+body {
+  background-color: #e6f2ff;
+}
+
+#content {
+  margin: -40px 0 20px;
+  padding: 10px 20px;
+  background-color: #fff;
+  border: 1px black solid;
+}
+
+#content hr {
+  border: 1px solid black;
+}
+
+#content div.comment {
+  margin: 20px 0;
+  border-top: 1px black solid;
+  border-bottom: 1px black solid;
+}
+
 @media only screen and (min-width: 768px) {
   .intro-header .site-heading,
   .intro-header .post-heading,
