--- a/input/family-photos/index.cshtml
+++ b/input/family-photos/index.cshtml
@@ -1,10 +1,9 @@
-Order: 5
-ArchiveSources: family-history/*
-ArchiveDestination: "family-history.html"
-ArchivePageSize: 5
+Order: 4
+ArchiveSources: family-photos/*
+ArchiveDestination: "family-photos.html"
 ArchiveOrderKey: Published
 ArchiveOrderDescending: true
-ArchiveTitle: Family History
+ArchiveTitle: Family Photos
 ---
 <div class="container-sm-height">
     <div class="row row-sm-height">
