--- a/input/technical/index.cshtml
+++ b/input/technical/index.cshtml
@@ -1,10 +1,9 @@
-Order: 4
-ArchiveSources: family-photos/*
-ArchiveDestination: "family-photos.html"
-ArchivePageSize: 5
+Order: 3
+ArchiveSources: technical/*
+ArchiveDestination: "technical.html"
 ArchiveOrderKey: Published
 ArchiveOrderDescending: true
-ArchiveTitle: Family Photos
+ArchiveTitle: Technical Posts
 ---
 <div class="container-sm-height">
     <div class="row row-sm-height">
