--- a/input/index.cshtml
+++ b/input/index.cshtml
@@ -17,15 +17,10 @@ ArchiveTitle: => GetString("Title")
             <h2>Charlie Poole</h2>
             <hr class="small"/>
             <span class="subheading">
-                Welcome to my new website, which I plan to use for both personal and
-                software-related posts going forward. I will be adding older material
-                gradually as well as making new posts.
+                Welcome to my new website, which will include both personal and
+                software-related posts going forward. I'm gradually moving pages here -
+                see the <a href="status.html">Site Status</a> page for details.
             </span>
-            <span class="subheading">
-                Until I finish reviewing my old technical posts and migrating material
-                that is still relevant, those interested should check
-            </span>
-            <a class="navbar-brand" style="color: #fff; font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;" href="http://charliepoole.com">CharliePoole.com</a>
             </div>
         </div>
         </div>
