--- a/input/_navbar.cshtml
+++ b/input/_navbar.cshtml
@@ -1,12 +1,9 @@
 <ul class="navbar-nav ml-auto">
+    <li class="nav-item"><a class="nav-link" href="@Context.GetLink("/")">Home</a></li>
     @foreach(IDocument doc in OutputPages.GetChildrenOf("index.html").Where(x => x.GetBool("ShowInNavbar", true)).OrderBy(x => x.GetInt(Keys.Order,1000)))
     {
-        // Don't add the home page to the nav bar
-        if (doc.Destination != "index.html")
-        {
-            <li class="nav-item">
-                @Html.DocumentLink(doc, new Dictionary<object, object> { { "class", "nav-link" } })
-            </li>
-        }
+        <li class="nav-item">
+            @Html.DocumentLink(doc, new Dictionary<object, object> { { "class", "nav-link" } })
+        </li>
     }
 </ul>
