--- a/input/css/override.css
+++ b/input/css/override.css
@@ -29,17 +29,21 @@ header.masthead .site-heading a {
   .intro-header .page-heading {
     padding: 50px 0;
   }
+
   .intro-header .site-heading h1,
   .intro-header .page-heading h1 {
     font-size: 36px;
   }
-}
+
+  header.masthead .post-heading {
+    padding: 60px 0 0;
+  }
 
 .bg-custom {
   background-color: #003e80;
 }
 
-.btn-custom {
+a.btn-custom {
   color: #fff;
   background-color: #003e80;
   border-color: #003e80;
