--- a/input/family-history/index.cshtml
+++ b/input/family-history/index.cshtml
@@ -1,3 +1,5 @@
+Title: Family History
+Image: /images/thepoolesofrichmondhill_898x258.jpg
 Order: 5
 ArchiveSources: family-history/*
 ArchiveDestination: "family-history.html"
