--- a/input/family-photos/index.cshtml
+++ b/input/family-photos/index.cshtml
@@ -1,4 +1,6 @@
+Title: Family Photos
 Order: 4
+Image: /images/thanksgiving-2009.jpg
 ArchiveSources: family-photos/*
 ArchiveDestination: "family-photos.html"
 ArchiveOrderKey: Published
