--- a/input/posts.cshtml
+++ b/input/posts.cshtml
@@ -3,6 +3,7 @@ Order: 4
 ArchiveSources: => GetString("PostSources")
 ArchiveOrderKey: Published
 ArchiveOrderDescending: true
+IsPage: true
 ---
 @foreach(IGrouping<int, IDocument> group in Document
     .GetChildren()
