--- a/input/tags.cshtml
+++ b/input/tags.cshtml
@@ -8,6 +8,7 @@ ArchiveOrderKey: Published
 ArchiveOrderDescending: true
 Title: Tags
 Order: 3
+IsPage: true
 ArchiveTitle: => GetString("GroupKey")
 ---
 @if (Document.ContainsKey(Keys.GroupKey))
