--- a/input/technical/index.cshtml
+++ b/input/technical/index.cshtml
@@ -1,5 +1,6 @@
-Order: 3
 Title: Technical Posts
+Order: 3
+Image: /images/charlie-and-ward.jpg
 ArchiveSources: technical/*
 ArchiveDestination: "technical.html"
 ArchiveOrderKey: Published
