--- a/input/index.cshtml
+++ b/input/index.cshtml
@@ -8,7 +8,7 @@ ArchiveOrderDescending: true
 ArchiveTitle: => GetString("Title")
 ---
 @section Header {
-    <header class="masthead">
+    <header class="masthead" style="background-image: url(/images/park-in-zagreb.jpg)">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
