--- a/input/tags.cshtml
+++ b/input/tags.cshtml
@@ -7,7 +7,8 @@ ArchivePageSize: 10
 ArchiveOrderKey: Published
 ArchiveOrderDescending: true
 Title: Tags
-Order: 3
+Order: 
+ShowInNavbar: false
 IsPage: true
 ArchiveTitle: => GetString("GroupKey")
 ---
