--- a/input/index.cshtml
+++ b/input/index.cshtml
@@ -19,7 +19,7 @@ ArchiveTitle: => GetString("Title")
             <span class="subheading">
                 Welcome to my new website, which will include both personal and
                 software-related posts going forward. I'm gradually moving pages here -
-                see the <a href="status.html">Site Status</a> page for details.
+                see the <a href="/status.html">Site Status</a> page for details.
             </span>
             </div>
         </div>
