--- a/input/_header.cshtml
+++ b/input/_header.cshtml
@@ -1,21 +1,23 @@
 @{
-    string backgroundImage = null;
-    if (Document.ContainsKey(WebKeys.Image))
-    {
-        backgroundImage = $"background-image: url(\"{Context.GetLink(Document.GetString(WebKeys.Image))}\")";
-    }
-    string description = Document.WithoutSettings().GetString("Lead") ?? Document.WithoutSettings().GetString(WebKeys.Description);
     string title = Document.GetString("Title") ?? Document.GetString("SiteTitle");
     bool isPost = Document.GetBool("IsPost") && title != "Tags" && title != "Archive";
-    bool hasImage = backgroundImage != null;
+    bool hasImage = Document.ContainsKey(WebKeys.Image);
     string linkedPost = Document.GetString("linkedPost");
+    string description = Document.WithoutSettings().GetString("Lead") ?? Document.WithoutSettings().GetString(WebKeys.Description);
+    string backgroundImage = hasImage && !isPost
+      ? $"background-image: url(\"{Context.GetLink(Document.GetString(WebKeys.Image))}\")"
+      : null; // backround images not currently used on posts to avoid conflict with og tags
+    string headingClass = isPost || linkedPost != null
+      ? "post-heading"
+      : hasImage ? "site-heading" : "page-heading";
 }
+
 <header class="masthead" style="@backgroundImage">
   <div class="overlay"></div>
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <div class="@(isPost || linkedPost != null ? "post-heading" : hasImage ? "site-heading" : "page-heading")">
+        <div class="@headingClass">
           <h2>
             @title
             @if (Document.GetInt(Keys.Index) > 1)
