--- a/input/family-history/index.cshtml
+++ b/input/family-history/index.cshtml
@@ -3,7 +3,7 @@ Image: /images/thepoolesofrichmondhill_898x258.jpg
 Order: 5
 ArchiveSources: family-history/*
 ArchiveDestination: "family-history.html"
-ArchiveOrderKey: Published
+ArchiveOrderKey: LastUpdate
 ArchiveOrderDescending: true
 ArchiveTitle: Family History
 IsPost: false
