--- a/input/family-photos/index.cshtml
+++ b/input/family-photos/index.cshtml
@@ -3,7 +3,7 @@ Order: 4
 Image: /images/thanksgiving-2009.jpg
 ArchiveSources: family-photos/*
 ArchiveDestination: "family-photos.html"
-ArchiveOrderKey: Published
+ArchiveOrderKey: LastUpdate
 ArchiveOrderDescending: true
 ArchiveTitle: Family Photos
 IsPost: false
