--- a/input/technical/index.cshtml
+++ b/input/technical/index.cshtml
@@ -3,7 +3,7 @@ Order: 3
 Image: /images/charlie-and-ward.jpg
 ArchiveSources: technical/*
 ArchiveDestination: "technical.html"
-ArchiveOrderKey: Published
+ArchiveOrderKey: LastUpdate
 ArchiveOrderDescending: true
 ArchiveTitle: Technical Posts
 IsPost: false
