--- a/input/tags.cshtml
+++ b/input/tags.cshtml
@@ -4,7 +4,7 @@ ArchiveKeyComparer: => StringComparer.OrdinalIgnoreCase.ToConvertingEqualityComp
 ArchiveDestination: >
   => GetInt("Index") <= 1 ? $"tags/{NormalizedPath.OptimizeFileName(GetString("GroupKey"))}/index.html" : $"tags/{NormalizedPath.OptimizeFileName(GetString("GroupKey"))}/{GetInt("Index")}.html"
 ArchivePageSize: 10
-ArchiveOrderKey: Published
+ArchiveOrderKey: LastUpdate
 ArchiveOrderDescending: true
 Title: Tags
 Order: 
