--- a/input/personal/index.cshtml
+++ b/input/personal/index.cshtml
@@ -1,23 +1,12 @@
-Title: Family History
-Image: /images/thepoolesofrichmondhill_898x258.jpg
-Order: 5
-ArchiveSources: family-history/*
-ArchiveDestination: "family-history.html"
+Title: Personal Blog
+Image: /images/thanksgiving-2009.jpg
+Order: 4
+ArchiveSources: personal/*
 ArchiveOrderKey: LastUpdate
 ArchiveOrderDescending: true
-ArchiveTitle: Family History
+ShowInNavbar: true
 IsPost: false
 ---
-<div style="margin: 0 15px">
-    <p>In recent years, I've become fascinated - maybe obsessed - with researching
-    into the history of my family. I use accounts on Ancestry, FindMyPast, MyHeritage
-    and FamilySearch to locate records. In this part of my web site, I record as much
-    information as I can along with my own stories and memories and those of others
-    in my family.</p>
-
-    <hr>
-</div>
-
 <div class="container-sm-height">
     <div class="row row-sm-height">
         <div class="col-md-9 right-border col-sm-height">
