--- a/input/css/override.css
+++ b/input/css/override.css
@@ -101,6 +101,28 @@ img.right {
   margin: 0 0 2em 1em;
 }
 
+figure.left { 
+  margin-right: 2em;
+  float: left;
+  max-width: 30%; 
+}
+
+figure img {
+  max-width: 100%;
+  max-height: 100%;
+  display: block;
+  margin: 0 auto;
+}
+
+figcaption {
+  font-style: italic;
+  text-align: center;
+}
+
+h1, h2, h3 {
+  clear: both
+}
+
 @media screen and (min-width: 601px) {
   div.pic hr {
     display: block;
