--- a/input/family-history/people/index.cshtml
+++ b/input/family-history/people/index.cshtml
@@ -7,13 +7,6 @@ ArchiveOrderKey: Person
     #content { background: #e6f2ff; width: auto; border: 0; }
 </style>
 
-<p class="comment">
-    This page is still under construction. Clicking on any of these cards
-    will eventually take you to a page about the named person. However,
-    at this time, most of those pages do not yet exist and clicking on the
-    card has no effect. Clickable cards show the name in a bold font.
-</p>
-
 @{
     // Create lists of persons and individual surnames
     var persons = new List<IDocument>();
@@ -36,67 +29,68 @@ ArchiveOrderKey: Person
     }
 }
 
-<!-- Display Filter UI -->
+<!-- Display Filter UI and instructions -->
 <div class="ml-4">
 
-    <div style="float: left; whitespace: nowrap; margin: 0 20px;">
-    <label for="surnames">Filter by surname:</label>
-    <select name="surnames" id="surnames" width="20em" onchange="applyFilters()">
-        <option selected>All surnames</option>
+    <table>
+        <tr>
+            <td style="border-width: 1px 0 1px 1px">Filter&nbsp;by&nbsp;surname:</td>
 
-    @foreach(string surname in surnames)
-    {
-        <option>@surname</option>
-    }
+            <td style="border-width: 1px 0 1px 0">
+                <select name="surnames" id="surnames" width="20em" onchange="applyFilters()">
+                    <option selected>All surnames</option>
 
-    </select>
-    </div>
+                    @foreach(string surname in surnames)
+                    {
+                        <option>@surname</option>
+                    }
+                </select>
+            </td>
 
-    <div style="float: left; whitespace: nowrap; margin: 0 20px;">
-    <button onclick="clearFilter()">Clear Filter</button>
-    </div>
-
-    <div style="clear: both" />
+            <td style="font-style: italic; border-width: 1px 1px 1px 0">
+                Click on a card that has the name in a bold font view a page about the named person.
+                If the name is not shown in bold, then the page does not yet exist.
+            </td>
+        </tr>
+    </table>
 
 </div>
 
 <div style="display: flex; justify-content: center; flex-wrap: wrap;">
 
-@foreach (var doc in persons)
-{
-    string link = Context.GetLink(doc);
-    string name = doc.GetString("Person");
-    bool hasData = !string.IsNullOrEmpty(doc.GetString("Excerpt"));
-
-    string birth = FormatDate(doc.GetString("Birth"));
-    if (string.IsNullOrEmpty(birth))
-        birth = "??";
-
-    string death = FormatDate(doc.GetString("Death"));
-    if (string.IsNullOrEmpty(death))
-        death = "??";
-
-    if (hasData)
+    @foreach (var doc in persons)
     {
-        <div class="card family-member">
-            <b><a class="stretched-link" href="@link">@name</a></b>
-            <br>
-        
-        <span>@birth - @death</span>
+        string link = Context.GetLink(doc);
+        string name = doc.GetString("Person");
+        bool hasData = !string.IsNullOrEmpty(doc.GetString("Excerpt"));
 
-        </div>
+        string birth = FormatDate(doc.GetString("Birth"));
+        if (string.IsNullOrEmpty(birth))
+            birth = "??";
+
+        string death = FormatDate(doc.GetString("Death"));
+        if (string.IsNullOrEmpty(death))
+            death = "??";
+
+        if (hasData)
+        {
+            <div class="card family-member">
+                <b><a class="stretched-link" href="@link">@name</a></b>
+                <br>
+            
+                <span>@birth - @death</span>
+            </div>
+        }
+        else
+        {
+            <div class="card family-member-nodata">
+                @name
+                <br>
+
+                <span>@birth - @death</span>
+            </div>
+        }
     }
-    else
-    {
-        <div class="card family-member-nodata">
-            @name
-            <br>
-
-        <span>@birth - @death</span>
-
-        </div>
-    }
-}
 
 </div>
 
@@ -133,16 +127,5 @@ ArchiveOrderKey: Person
             var showCard = surnames.selectedIndex == 0 || text.startsWith(surname);
             card.style.display = (showCard) ? "block":"none";
         }
-    }
-
-    function clearFilter()
-    {
-        surnames.selectedIndex = 0;
-        living.checked = true;
-        deceased.checked = true;
-
-        var card;
-        for (card of cards)
-            card.style.display = "block";
     }
 </script>
