Hide non-technical posts making this site tech-only; create new directory for ported articles

--- a/input/articles/index.cshtml
+++ b/input/articles/index.cshtml
@@ -1,11 +1,11 @@
-Title: Posts
+Title: Articles
 Order: 3
 Image: /images/charlie-and-ward.jpg
-ArchiveSources: technical/*
-ArchiveDestination: "technical.html"
+ArchiveSources: articles/*
+ArchiveDestination: "articles.html"
 ArchiveOrderKey: LastUpdate
 ArchiveOrderDescending: true
-ArchiveTitle: Posts
+ArchiveTitle: Articles
 ShowInNavbar: true
 IsPost: false
 ---
