--- a/input/genealogy/people/index.cshtml
+++ b/input/genealogy/people/index.cshtml
@@ -1,5 +1,5 @@
 Title: Family Members
-ArchiveSources: family-history/people/*
+ArchiveSources: genealogy/people/*
 ArchiveOrderKey: Person
 ---
 <style>
