--- a/input/index.cshtml
+++ b/input/index.cshtml
@@ -8,18 +8,17 @@ ArchiveOrderDescending: true
 ArchiveTitle: => GetString("Title")
 ---
 @section Header {
-    <header class="masthead" style="background-image: url(/images/park-in-zagreb.jpg)">
+    <header class="masthead" style="background-image: url(/images/charlie-and-ward.jpg)">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
         <div class="col-md-12">
             <div class="site-heading">
-            <h2>Charlie Poole</h2>
+            <h2>It's the Tests</h2>
             <hr class="small"/>
             <span class="subheading">
-                Welcome to my new website, which will include both personal and
-                software-related posts going forward. I'm gradually moving pages here -
-                see the <a href="/status.html">Site Status</a> page for details.
+                This is my technical blog. After experimenting with a single site for both my
+                personal and software-related posts, I have returned to using separate sites.
             </span>
             </div>
         </div>
