--- a/input/personal/index.cshtml
+++ b/input/personal/index.cshtml
@@ -4,7 +4,7 @@ Order: 4
 ArchiveSources: personal/*
 ArchiveOrderKey: LastUpdate
 ArchiveOrderDescending: true
-ShowInNavbar: true
+ShowInNavbar: False
 IsPost: false
 ---
 <div class="container-sm-height">
@@ -15,7 +15,7 @@ IsPost: false
         <div class="col-md-3 mt-4 mt-md-0 col-sm-height">
             <div class="mt-4">
                 <h5>Family</h5>
-                <a class="badge badge-light" href="/family-history/people/">All Members...</a>
+                <a class="badge badge-light" href="/genealogy/people/">All Members...</a>
             </div>
             @Html.Partial("/_sidebar.cshtml", Document)
         </div>
